syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;
package io.mkth.grpc.authentication;

message Empty {
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool message = 1;
}

message FindCustomerRequest {
  string username = 1;
}

message FindCustomerResponse {
  string id = 1;
  string username = 2;
  string name = 3;
  string email = 4;
}

message FindAllUserRequest {
  int32 page = 1;
  int32 size = 2;
}

message FindAllUserResponse {
  repeated User user = 1;
  int32 page = 2;
  int32 size = 3;
  int32 totalPages = 4;
  int32 totalElements = 5;
}

message SaveCustomerRequest {
  string username = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message SaveCustomerResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message UpdateUserRequest {
  string username = 1;
  string email = 2;
}

message UpdateUserResponse {
  bool response = 1;
}

message DeleteUserRequest {
  string username = 1;
}

message DeleteUserResponse {
  bool response = 1;
}

service LoginService {
  rpc authenticate (LoginRequest) returns (LoginResponse);
  rpc findUser (FindCustomerRequest) returns (FindCustomerResponse);
  rpc findAllUser (FindAllUserRequest) returns (FindAllUserResponse);
  rpc streamUser (Empty) returns (stream FindCustomerResponse);
  rpc saveUser (SaveCustomerRequest) returns (SaveCustomerResponse);
  rpc updateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc deleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}